--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,35 @@
 baseURL = 'https://pascal-lang.org/'
 languageCode = 'en-us'
-title = 'Object Pascal Language'
-theme = 'ananke'
+title = 'Pascal - Readable, Reliable Programming'
+
+# Disable theme to use custom templates
+# theme = 'ananke'
+
+[markup]
+  [markup.highlight]
+    style = 'github'
+    lineNos = true
+    tabWidth = 2
+    codeFences = true
+
+[params]
+  description = 'Pascal programming language - readable, reliable, and educational'
+  author = 'Object Pascal Community'
+
+[menu]
+  [[menu.main]]
+    name = 'Home'
+    url = '/'
+    weight = 10
+  [[menu.main]]
+    name = 'Learn'
+    url = '/learn/'
+    weight = 20
+  [[menu.main]]
+    name = 'Docs'
+    url = '/docs/'
+    weight = 30
+  [[menu.main]]
+    name = 'Community'
+    url = '/community/'
+    weight = 40
